All Pages Update
Added a slideshow displaying screenshots of 5 projects I have done in the Coding Program with a caption linked to the GitHub live page of each project, set the navigation bar to be fixed and stay at the top when the page is scrolled, added some JavaScript to make the h1 heading disappear after being scrolled past, filled in the content for the projects page, and set the title of each page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/styles.css">
+
+  <script src="js/header_disappear.js"></script>
 </head>
 
 <body>
@@ -76,7 +78,8 @@
     <p>
       Centennial High School, Peoria, AZ <br>
       Expected Grad Date: May 2020 <br>
-      West-MEC Coding Program GPA: 4 <br>
+      West-MEC Coding Program <br>
+      GPA: 4 <br>
       Relevant Coursework: Computer Programming and Tech,
       <br> Game Design and Development,
       <br> AP Computer Science A.
