--- a/aboutme.html
+++ b/aboutme.html
@@ -61,6 +61,7 @@
 
         <h2 id="skills">Skills</h2>
         <hr>
+        <br>
 
         <dl>
             <dt>Complex Problem Solving</dt>
@@ -80,6 +81,35 @@
         </dl>
 
         <!-- Add a contact me section that expands to a modal pop-up window. -->
+
+        <h2 id="contact">Contact Me</h2>
+        <hr>
+        <br>
+
+        <div class="container">
+            <form action="action_page.php">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <!-- <label for="country">Country</label>
+                <select id="country" name="country">
+                    <option value="australia">Australia</option>
+                    <option value="canada">Canada</option>
+                    <option value="usa">USA</option>
+                </select> -->
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+
+            </form>
+        </div>
+
     </section>
 
     <footer>Dylan J. Kelley</footer>
