Auto stash before merge of "master" and "origin/master"

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
             by clicking on
             the <strong>project caption</strong>.</p>
 
-        <!-- Slideshow showing all the projects I've done -->
+        <!-- Slideshow showing all the web projects I've done -->
         <!-- Slideshow container -->
         <div class="slideshow-container">
 
@@ -115,7 +115,15 @@
         </div>
         <!-- End of slideshow -->
 
-        <!-- Add another slideshow displaying some of my projects done with Java. -->
+        <h2 id="javaHeading">Java Projects</h2>
+        <hr>
+
+        <h3>Personal Projects</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem necessitatibus explicabo saepe rerum
+            accusantium assumenda similique incidunt vel fugit tenetur obcaecati, nesciunt commodi? Error architecto
+            necessitatibus sit maiores fugiat. Officia?</p>
+        <!-- Slideshow displaying some of my projects done with Java. -->
+
     </section>
 
     <footer>Dylan J. Kelley</footer>
