--- a/aboutme.html
+++ b/aboutme.html
@@ -24,8 +24,11 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+    <!--===========================================-->
     <!-- Add your site or application content here -->
+    <!--===========================================-->
 
+    <!-- Imported background image -->
     <style>
         html {
             background-image: url(lightning_background.jpeg);
@@ -34,6 +37,7 @@
         }
     </style>
 
+    <!-- Fixed horizontal navigation bar that displays links to all other pages -->
     <header>
         <nav>
             <ul>
@@ -45,6 +49,7 @@
         </nav>
     </header>
 
+    <!-- Title of the page displayed in front of the background image -->
     <h1 id="name">About Me</h1>
 
     <section>
