--- a/experience.html
+++ b/experience.html
@@ -25,8 +25,11 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+    <!--===========================================-->
     <!-- Add your site or application content here -->
+    <!--===========================================-->
 
+    <!-- Imported background image -->
     <style>
         html {
             background-image: url(code_image.png);
@@ -35,6 +38,7 @@
         }
     </style>
 
+    <!-- Fixed horizontal navigation bar that displays links to all other pages -->
     <header>
         <nav>
             <ul>
@@ -46,6 +50,7 @@
         </nav>
     </header>
 
+    <!-- Title of the page displayed in front of the background image -->
     <h1 id="name">Experience</h1>
 
     <section>
