--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+  <!--===========================================-->
   <!-- Add your site or application content here -->
+  <!--===========================================-->
 
+  <!-- Embedded background image -->
   <style>
     html {
-      background-image: url(space_background2.jpg);
+      background-image: url(space_background3.jpeg);
       background-attachment: fixed;
       background-size: cover;
     }
   </style>
 
+  <!-- Fixed horizontal navigation bar that displays links to all other pages -->
   <header>
     <nav>
       <ul>
@@ -45,9 +49,11 @@
     </nav>
   </header>
 
+  <!-- Title of the page displayed in front of the background image -->
   <h1 id="name">Dylan J. Kelley</h1>
 
   <!-- Re-do homepage, change content and content placement. -->
+  <!-- Section that scrolls over the background image and displays all page content. -->
   <section>
 
     <h2>Personal Profile</h2>
