--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,11 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+    <!--===========================================-->
     <!-- Add your site or application content here -->
+    <!--===========================================-->
 
+    <!-- Imported background image -->
     <style>
         html {
             background-image: url(space_background3.jpeg);
@@ -35,6 +38,7 @@
         }
     </style>
 
+    <!-- Fixed horizontal navigation bar that displays links to all other pages -->
     <header>
         <nav>
             <ul>
@@ -46,6 +50,7 @@
         </nav>
     </header>
 
+    <!-- Title of the page displayed in front of the background image -->
     <h1 id="name">Projects</h1>
 
     <section>
@@ -122,7 +127,62 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem necessitatibus explicabo saepe rerum
             accusantium assumenda similique incidunt vel fugit tenetur obcaecati, nesciunt commodi? Error architecto
             necessitatibus sit maiores fugiat. Officia?</p>
+
         <!-- Slideshow displaying some of my projects done with Java. -->
+        <!-- Slideshow 2 container -->
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div id="loadFirst" class="mySlides fade">
+                <div class="numbertext">1 / 5</div>
+                <img src="screenshot_project_02_04.PNG" style="width:100%">
+                <div class="text"><a class="slideshowCaption" href="https://west-mec-coding-y1s1.github.io/s1-project-02-04-DKelley989/">4th
+                        Project of Unit 2</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 5</div>
+                <img src="screenshot_project_03_04.PNG" style="width:100%">
+                <div class="text"><a class="slideshowCaption" href="https://dkelley989.github.io/S1_Project_03_04/">4th
+                        Project of Unit 3</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 5</div>
+                <img src="screenshot_project_04_04.PNG" style="width:100%">
+                <div class="text"><a class="slideshowCaption" href="https://dkelley989.github.io/SQL-Injection-Project/">4th
+                        Project of Unit 4</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 5</div>
+                <img src="screenshot_project_05_04.PNG" style="width:100%">
+                <div class="text"><a class="slideshowCaption" href="https://dkelley989.github.io/S1_Project_05_04/">4th
+                        Project of Unit 5</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 5</div>
+                <img src="screenshot_project_06_04.PNG" style="width:100%">
+                <div class="text"><a class="slideshowCaption" href="https://dkelley989.github.io/S1_Project_06_04/">4th
+                        Project of Unit 6</a></div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+        </div>
+        <!-- End of slideshow 2 -->
 
     </section>
 
