--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Embedded background image -->
   <style>
     html {
-      background-image: url(space_background3.jpeg);
+      background-image: url(space_background.jpeg);
       background-attachment: fixed;
       background-size: cover;
     }
