--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h2>Personal Profile</h2>
 
     <p>
-      Hardworking, methodical first year Coding student who is able to push through problems to find a solution and
+      Hardworking, methodical second year Coding student who is able to push through problems to find a solution and
       able
       to talk and get along with various different people. Seeking the position of Web Developer.
     </p>
@@ -85,10 +85,11 @@
       Centennial High School, Peoria, AZ <br>
       Expected Grad Date: May 2020 <br>
       West-MEC Coding Program <br>
-      GPA: 4 <br>
+      GPA: 3.5 <br>
       Relevant Coursework: Computer Programming and Tech,
       <br> Game Design and Development,
       <br> AP Computer Science A.
+      <br> AP Computer Science Principles H.
     </p>
 
     <h2>Employment/Volunteer Activities</h2>
