--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@
         <p id="dylanCaption">
             My name is Dylan Kelley and I consider myself to be a hardworking, methodical student who is able to push
             through problems to find a solution and able to talk and get along with various different people. I am a
-            first year Coding student at West-Mec Central Campus and a Junior at Centennial High School, trying to best
+            second year Coding student at West-Mec Central Campus and a Junior at Centennial High School, trying to best
             prepare myself for the future.</p>
 
         <h2 id="skills">Skills</h2>
