Updated high school year and classes

--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
         <h3 id="schoolHeading">Centennial High School - Class of 2020</h3>
 
         <p id="schoolCaption">
-            I am currently a Junior at Centennial High School in the graduating class of 2020. I have taken multiple
+            I am currently a Senior at Centennial High School in the graduating class of 2020. I have taken multiple
             computer and technology classes as well as taken all dual enrollment opportunites to gain college credits.
             I maintain my grades, keep up on assignments, turn in all my work, and I usually do pretty good on tests.
             Overall, I love my school and enjoy being a student there.
@@ -77,6 +77,9 @@
             <li class="xp">Computer Programming and Tech</li>
             <li class="xp">Game Design and Development</li>
             <li class="xp">AP Computer Science A</li>
+            <li class="xp">AP Computer Science Principles H</li>
+            <li class="xp">Advanced Software Development H</li>
+            <li class="xp">Survey of Coding</li>
         </ul>
 
         <br>
@@ -84,7 +87,6 @@
         <h3 class="xp">Coursework In Progress</h3>
 
         <ul class="xp">
-            <li class="xp">Advanced Software Development H</li>
             <li class="xp">Survey of Coding</li>
             <li class="xp">Coding Fundamentals I</li>
         </ul>
